deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-demo
  labels:
    app.kubernetes.io/name: app-demo
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: monorepo-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: app-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-demo
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: monorepo-lab
    spec:
      serviceAccountName: app-demo
      containers:
        - name: app-demo
          image: app-demo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 96Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
