deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-demo
  labels:
    app.kubernetes.io/name: app-demo
    app.kubernetes.io/part-of: monorepo-lab
spec:
  selector:
    app.kubernetes.io/name: app-demo
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
